--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "format": "prettier -w ./src"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +16,7 @@
     "@types/jest": "^29.5.10",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
+    "prettier": "^3.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.3.2"
   }
